test/expected/explain_a5fd_pi.out
explain int* f[5](double)
           ^
12: error: array of function is illegal; did you mean array of pointer to function?
